--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=ESP AsyncTCP
 version=1.2.2
 author=Me-No-Dev
-maintainer=Me-No-Dev
+maintainer=LBussy
 sentence=Async TCP Library for ESP8266 and ESP31B
 paragraph=Async TCP Library for ESP8266 and ESP31B
 category=Other
-url=https://github.com/me-no-dev/ESPAsyncTCP
+url=https://github.com/lbussy/ESPAsyncTCP
 architectures=*
